--- a/.github/workflows/holiday-reminder.yml
+++ b/.github/workflows/holiday-reminder.yml
@@ -1,13 +1,37 @@
 name: reminder
 
 on:
-  schedule:
-    - cron: '0/5 * * * sun'
+  push:
+    branches: [ master ]
+  # schedule:
+  #   - cron: '0/10 * * * sun'
 
 jobs:
-  happy-new-year:
+  # happy-new-year:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 5
+  #   steps:
+  #   - name: Say Hello World
+  #     uses: ajilraju/helloworld-actions@v1.3
+
+  container:
     runs-on: ubuntu-latest
+    container: ubuntu:19.10
+
     steps:
-    - name: Say Hello World
-      uses: ajilraju/helloworld-actions@v1.3
+    - uses: actions/checkout@v1
+    - name: Build
+      run: |
+        apt update
+        apt install mm-common clang-9 --yes
+        export CXX=clang++-9
+        ./autogen.sh --enable-warnings=fatal
+        make
+    - name: Test
+      run: make check
+    - name: Distcheck
+      run: |
+        # distcheck runs configure again so we need to specify CXX again.
+        export CXX=clang++-9
+        make distcheck
 
